[package]
name = "ferrumgate"
version = "0.9.0"
edition = "2021"
description = "Async API gateway and reverse proxy built on Tokio with zero-copy I/O, TLS termination, and pluggable middleware"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
