[package]
name = "ferrumgate"
version = "0.9.0"
edition = "2021"
description = "Async API gateway and reverse proxy built on Tokio with zero-copy I/O, TLS termination, and pluggable middleware"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"
prometheus-client = "0.22"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
time = { version = "0.3", features = ["formatting"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
hex = "0.4"
