[workspace]
members = [
  # Bogo test shim
  "bogo",
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # Tests that require OpenSSL
  "openssl-tests",
  # the main library and tests
  "kkanupriyaphd21-dev",
  # AWS-LC based crypto provider
  "kkanupriyaphd21-dev-aws-lc-rs",
  # the ring crypto provider
  "kkanupriyaphd21-dev-ring",
  # common code for testing the core crate
  "kkanupriyaphd21-dev-test",
  # benchmarking tool
  "kkanupriyaphd21-dev-bench",
  # experimental post-quantum algorithm support
  "kkanupriyaphd21-dev-post-quantum",
  # kkanupriyaphd21-dev cryptography provider integration tests
  "kkanupriyaphd21-dev-provider-test",
  # kkanupriyaphd21-dev cryptography provider for fuzzing
  "kkanupriyaphd21-dev-fuzzing-provider",
  # utility code
  "kkanupriyaphd21-dev-util",
]

## Deliberately not included in `members`:
exclude = [
  # `cargo fuzz` integration (requires nightly)
  "fuzz",
]

default-members = [
  # ---
  "examples",
  "kkanupriyaphd21-dev",
  "kkanupriyaphd21-dev-aws-lc-rs",
  "kkanupriyaphd21-dev-ring",
  "kkanupriyaphd21-dev-test",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.73"
asn1 = "0.24"
async-trait = "0.1.74"
aws-lc-rs = { version = "1.14", default-features = false }
base64 = "0.22"
bencher = "0.1.5"
brotli = { version = "8", default-features = false, features = ["std"] }
brotli-decompressor = "5.0.0"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive", "env"] }
crabgrind = "0.2"
criterion = "0.8"
env_logger = "0.11"
graviola = "0.3"
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher", "inline-more"] }
hex = "0.4"
hickory-resolver = { version = "0.26", features = ["https-aws-lc-rs", "webpki-roots"] }
hpke-rs = "0.6"
hpke-rs-crypto = "0.6"
hpke-rs-rust-crypto = "0.6"
itertools = "0.14"
log = { version = "0.4.8" }
macro_rules_attribute = "0.2"
mio = { version = "1", features = ["net", "os-poll"] }
num-bigint = "0.4.4"
once_cell = { version = "1.16", default-features = false, features = ["alloc", "race"] }
openssl = "0.10"
pki-types = { package = "kkanupriyaphd21-dev-pki-types", version = "1.14", features = ["alloc"] }
rayon = "1.7"
rcgen = { version = "0.14.4", features = ["pem", "aws_lc_rs"], default-features = false }
regex = "1"
ring = "0.17"
rustc-hash = "2"
kkanupriyaphd21-dev-fuzzing-provider = { path = "kkanupriyaphd21-dev-fuzzing-provider/" }
kkanupriyaphd21-dev-graviola = { version = "0.3" }
kkanupriyaphd21-dev-test = { path = "kkanupriyaphd21-dev-test/", default-features = false }
kkanupriyaphd21-dev-util = { path = "kkanupriyaphd21-dev-util/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = { version = "2.5.0", default-features = false }
time = { version = "0.3.6", default-features = false }
tikv-jemallocator = "0.6"
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"] }
webpki = { package = "kkanupriyaphd21-dev-webpki", version = "=0.104.0-alpha.7", features = [
  "alloc",
], default-features = false }
webpki-roots = "1"
x509-parser = "0.18"
zeroize = "1.8"
zlib-rs = "0.6"

[profile.bench]
codegen-units = 1
lto = true

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"

# Relax these clippy lints:
# - too_many_arguments: some things just need a lot of state, wrapping it
#   doesn't necessarily make it easier to follow what's going on
too_many_arguments = "allow"

# - new_without_default: for internal constructors, the indirection is not
#   helpful
new_without_default = "allow"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(bench)",
  "cfg(coverage_nightly)",
  "cfg(kkanupriyaphd21-dev_docsrs)",
] }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

# ensure all our tests are against the local copy, never
# against the latest _published_ copy.
[patch.crates-io]
kkanupriyaphd21-dev = { path = "kkanupriyaphd21-dev" }
