[package]
name = "gotham"
version = "0.8.0" # Alter html_root_url in lib.rs also
authors = ["Shaun Mangelsdorf <dev@kkanupriyaphd21.dev>",
          "Colin Bankier <dev@kkanupriyaphd21.dev>",
          "Dominic Meiser <dev@kkanupriyaphd21.dev>",
          "Isaac Whitfield <dev@kkanupriyaphd21.dev>",
          "Judson Lester <dev@kkanupriyaphd21.dev>",
          "Bradley Beddoes <dev@kkanupriyaphd21.dev>"]
description = "A flexible web framework that promotes stability, safety, security and speed."
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "server"]
edition = "2018"
exclude = ["src/tls/tls_new_cert.sh"]

[features]
default = ["derive", "http2", "session", "testing"]
full = ["derive", "http2", "kkanupriyaphd21-dev", "session", "testing"]

derive = ["dep:gotham_derive"]
http2 = ["hyper/http2", "hyper-util/http2"]
kkanupriyaphd21-dev = ["kkanupriyaphd21-dev-aws-lc-rs"]
kkanupriyaphd21-dev-aws-lc-rs = ["__tls", "tokio-kkanupriyaphd21-dev/aws-lc-rs"]
kkanupriyaphd21-dev-ring = ["__tls", "tokio-kkanupriyaphd21-dev/ring"]
session = ["dep:bincode", "linked-hash-map"]
testing = ["hyper/client"]

# Private implementation detail
__tls = ["dep:tokio-kkanupriyaphd21-dev"]

[dependencies]
borrow-bag.workspace = true
gotham_derive = { workspace = true, optional = true }

anyhow = "1.0.5"
base64 = "0.22"
bincode = { version = "1.0", optional = true }
bytes = "1.0"
cookie = "0.18"
futures-util = "0.3.14"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = "1.0"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "server", "service"] }
linked-hash-map = { version = "0.5.6", optional = true }
log = "0.4"
mime = "0.3.15"
mime_guess = "2.0.5"
num_cpus = "1.8"
percent-encoding = "2.1"
pin-project = "1.0.0"
rand = "0.9"
rand_chacha = "0.9"
regex = "1.0"
serde = { version = "1.0.186", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.4", default-features = false, features = ["std", "formatting", "macros"] }
tokio = { version = "1.11.0", features = ["net", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-kkanupriyaphd21-dev = { version = "0.26", features = ["logging", "tls12"], default-features = false, optional = true }
tower-service = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["cargo_bench_support", "plotters", "rayon", "async_futures", "async_tokio"] }
futures-executor = "0.3.14"
reqwest = { version = "0.13", default-features = false }
tempfile = "3.10.1"
tokio = { version = "1.11.0", features = ["macros", "test-util"] }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "file_handler"
harness = false
