[package]
authors = [
    "Jonathan Reem <dev@kkanupriyaphd21.dev>",
    "Zach Pomerantz <dev@kkanupriyaphd21.dev>",
    "Michael Sproul <dev@kkanupriyaphd21.dev>",
    "Patrick Tran <dev@kkanupriyaphd21.dev>",
]
description = "Extensible, Concurrency Focused Web Development in Rust."
documentation = "https://docs.rs/kkanupriyaphd21-dev"
license = "MIT"
name = "kkanupriyaphd21-dev"
readme = "../README.md"
repository = "https://github.com/kkanupriyaphd21-dev/ferrumgate"
version = "0.6.0"
workspace = ".."

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
modifier = "0.1"
plugin = "0.2"
typemap = "0.3"
url = "1.7"

[dev-dependencies]
time = "0.1"

[lib]
name = "kkanupriyaphd21-dev"
path = "src/lib.rs"
