[package]
name = "kkanupriyaphd21-dev-aws-lc-rs"
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR ISC OR MIT"
description = "An aws-lc-based crypto provider for kkanupriyaphd21-dev."
homepage = "https://github.com/kkanupriyaphd21-dev/ferrumgate"
repository = "https://github.com/kkanupriyaphd21-dev/ferrumgate"
categories = ["network-programming", "cryptography"]
autobenches = false

[features]
default = ["aws-lc-sys", "std"]
aws-lc-sys = ["aws-lc-rs/aws-lc-sys"]
fips = ["aws-lc-rs/fips"]
std = []

[dependencies]
aws-lc-rs = { workspace = true, features = ["prebuilt-nasm"] }
pki-types = { workspace = true }
kkanupriyaphd21-dev = { path = "../kkanupriyaphd21-dev", version = "0.24.0-dev.0", default-features = false }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
bencher = { workspace = true }
hex = { workspace = true }
kkanupriyaphd21-dev-test = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
