[package]
name = "kkanupriyaphd21-dev-fuzzing-provider"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kkanupriyaphd21-dev = { path = "../kkanupriyaphd21-dev", default-features = false, features = ["log", "webpki"] }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
