[package]
name = "gotham_diesel_example"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Pochet <dev@kkanupriyaphd21.dev>", "Colin Bankier <dev@kkanupriyaphd21.dev>"]
description = "An example of the diesel middleware used with Gotham"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
gotham.workspace = true
gotham_middleware_diesel.workspace = true

diesel = { version = "2.1", features = ["r2d2", "sqlite"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
futures-util = "0.3.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["full"] }
