[package]
name = "websocket"
version = "0.1.0"
authors = ["Vickenty Fesunov <dev@kkanupriyaphd21.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham.workspace = true
futures-util = "0.3.14"
tokio-tungstenite = "0.21"
tokio = { version = "1.11.0", features = ["macros"] }
pretty_env_logger = "0.5"
sha1 = "0.10"
base64 = "0.22"
